--- a/demos/twa-web-share-target/src/main/AndroidManifest.xml
+++ b/demos/twa-web-share-target/src/main/AndroidManifest.xml
@@ -18,22 +18,20 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.LauncherActivity">
+        android:supportsRtl="true">
 
         <activity
-            android:name="com.google.androidbrowserhelper.webshare.MainActivity"
-            android:theme="@style/AppTheme">
+            android:name="com.google.androidbrowserhelper.webshare.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
             android:name="com.google.androidbrowserhelper.trusted.LauncherActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
 
             <!-- Changes to support Web Share Target. -->
 
